deployment/k8s/env/prod/overlay-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    spec:
      imagePullSecrets:
        - name: prod-oliverrr-regcred
      containers:
        - name: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    spec:
      imagePullSecrets:
        - name: prod-oliverrr-regcred
      containers:
        - name: frontend
